--- a/css/styles.css
+++ b/css/styles.css
@@ -39,13 +39,17 @@ a{
  .card{
      display: flex;
      margin: auto;
-     margin:70px 70px;
+     margin:85px 70px 0 70px;
+     
  }
 
  .card-info{
      flex-basis: 35%;
      padding-left: 50px;
      padding-top: 50px;
+     display: flex;
+     flex-direction: column;
+     position: relative;
      
  }
 
@@ -57,3 +61,20 @@ a{
  .btn{
      margin-top: 30px;
  }
+
+.fab{
+    color: #fff;
+    align-self: flex-end;
+    padding: 10px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    margin-right: 10px;
+    text-align: center;
+   
+
+}
+.socials{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
