--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,16 @@ a{
     background: #fff;
     padding: 10px 60px;
     border-radius: 25px;
+    transition: ease-in-out 0.3s;
+    
 }
+
+a:hover{
+    background: hsl(277, 64%, 61%);
+    cursor: pointer;
+    color: #fff;
+}
+
  .logo{
      margin: 50px 70px 0 70px;
  }
@@ -62,19 +71,32 @@ a{
      margin-top: 30px;
  }
 
-.fab{
-    color: #fff;
-    align-self: flex-end;
-    padding: 10px;
-    border: 1px solid #fff;
-    border-radius: 50%;
-    margin-right: 10px;
-    text-align: center;
-   
 
-}
 .socials{
     position: absolute;
     right: 0;
     bottom: 0;
+}
+
+.socials ul{
+    display: flex;
+}
+
+.socials ul li{
+    list-style: none;
+    width: 50px;
+    height: 50px;
+    margin: 0 5px;
+    border: 1px solid #fff;
+    display: grid;
+    place-items: center;
+    border-radius: 50%;
+    transition: ease-in-out 0.3s;
+    
+}
+
+.socials ul li:hover{
+    border: 1px solid hsl(277, 64%, 61%);
+    cursor: pointer;
+    color: hsl(277, 64%, 61%);
 }
